# moptimizer_0

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  formatter.sh  src  test
.circleci/: config.yml
.github/workflows/: cmake.yml  ubuntu.yml
cmake/: duna-optimizer-config.cmake.in  duna_optimizer-config.cmake.in  duna_optimizerConfig.cmake
docs/: Cost.puml  Optimizer.puml
experimental/: CMakeLists.txt  cost_function.cpp  cost_function.h  levenberg_marquadt.cpp  levenberg_marquadt.h  optimizer.h  types.h  use.cpp
experimental/src/: ceres_camera_calibration.cpp  ceres_helloworld.cpp  scene_reconstruct.cpp
gtest/: camera_calibration.test.cpp  camera_calibration_test.cpp  model_test.cpp  registration_point2plane.test.cpp  registration_point2point.test.cpp  registration_test.cpp  search.test.cpp  simple_model.test.cpp  slam.test.cpp  timing.hpp
gtest/data/: map10.pcd  map100.pcd  map101.pcd  map102.pcd  map103.pcd  map104.pcd  map105.pcd  map106.pcd  map107.pcd  map108.pcd  map109.pcd  map11.pcd  map110.pcd  map111.pcd  map112.pcd  map113.pcd  map114.pcd  map115.pcd  map116.pcd  map117.pcd  map118.pcd  map119.pcd  map12.pcd  map120.pcd  map121.pcd  map122.pcd  map123.pcd  map124.pcd  map125.pcd  map126.pcd  map127.pcd  map128.pcd  map13.pcd  map14.pcd  map19.pcd  map21.pcd  map24.pcd  map25.pcd  map26.pcd  map27.pcd  (+167 more)
include/: calibration_cost.hpp  cost_function.hpp  exception.hpp  generic_optimizator.h  optimizator.h  registration.h  registration.hpp  registration_cost.hpp  so3.h  so3.hpp
include/cost/: calibration_cost.hpp  model_cost.hpp  registration_cost.hpp
include/duna/: cost_function.h  cost_function.hpp  cost_function_analytical.h  cost_function_analytical_dynamic.h  cost_function_numerical.h  cost_function_numerical_dynamic.h  cost_function_rotation_state.h  duna_exports.h  duna_log.h  exception.h  generic_optimizator.h  levenberg_marquadt.h  levenberg_marquadt_dynamic.h  logger.h  logging.h  loss_function.h  manifold.h  model.h  optimizator.h  optimizer.h  parameter.h  registration.h  so3.h  stopwatch.hpp  types.h
include/duna/cost/: calibration_cost.hpp  distance_functor.h  model_cost.hpp  point_error.hpp  point_errors.hpp  registration_cost.hpp
include/duna/covariance/: covariance.h
include/duna/impl/: generic_optimizator.hpp  registration.hpp
include/duna/loss_function/: geman_mcclure.h  loss_function.h
include/duna/map/: README.md  cost_function_analytical_covariance.h  cost_function_rotation_state.h  transformation_estimationMAP.h
include/duna/models/: accelerometer.h  point2plane.h  point2plane3dof.h  point2point.h  scan_matching.h  scan_matching3dof.h  scan_matching6dof.h  scan_matching_base.h  scan_matching_point2plane_3dof.h  scan_matching_point2plane_6dof.h  scan_matching_point2point_6dof.h
include/duna/registration/: registration.h  registration_3dof.h  registration_base.h  registration_model copy 2.h  registration_model copy.h  registration_model.h  scan_matching.h  (+4 more)
include/duna_optimizer/: cost_function.h  cost_function_analytical.h  cost_function_analytical_dyn.h  cost_function_analytical_dynamic.h  cost_function_common.h  cost_function_numerical.h  cost_function_numerical_dyn.h  cost_function_numerical_dynamic.h  delta.h  duna_exports.h  exception.h  levenberg_marquadt.h  levenberg_marquadt_dyn.h  levenberg_marquadt_dynamic.h  linearization.h  logger.h  logger_.h  model.h  optimizer.h  parameter.h  stopwatch.hpp  types.h
include/impl/: generic_optimizator.hpp  registration.hpp
include/moptimizer/: cost_function.h  cost_function_analytical.h  cost_function_analytical_dyn.h  cost_function_numerical.h  cost_function_numerical_dyn.h  delta.h  exception.h  levenberg_marquadt_dyn.h  linearization.h  logger.h  model.h  moptimizer_exports.h  optimizer.h  parameter.h  so3.h  types.h
old/: generic_optimizator.cpp
old/include/: cost_function.h  generic_optimizator.h  optimizator.h
src/: calibration_cost.hpp  cost_function.cpp  cost_function.hpp  cost_function_analytical.cpp  cost_function_analytical_dyn.cpp  cost_function_analytical_dynamic.cpp  cost_function_numerical_dyn.cpp  cost_function_numerical_dynamic.cpp  covariance.cpp  delta.cpp  exception.cpp  generic_optimizator.cpp  generic_optimizator.h  levenberg_marquadt.cpp  levenberg_marquadt_dyn.cpp  levenberg_marquadt_dynamic.cpp  linearization.cpp  logger.cpp  logger_.cpp  model_cost.hpp  optimizator.h  optimizator.puml  registration.cpp  registration.hpp  registration_3dof.cpp  registration_cost.hpp  scan_matching.cpp  scan_matching_3dof.cpp  so3.cpp  transformation_estimation3DOF.cpp  transformation_estimation6DOF.cpp  transformation_estimationMAP.cpp
test/: analytical_differentiation.cpp  camera_calibration.cpp  covariance.cpp  curve_fitting.cpp  differentiation.cpp  draft.cpp  logging.cpp  loss_function.cpp  manifold.cpp  maximum_a_posteriori.cpp  multiple_objectives.cpp  numerical_diff.cpp  numerical_differentiation.cpp  parameters.cpp  powell.cpp  registration.cpp  registration3dof_point2plane.cpp  registration_MAP.cpp  registration_point2plane.cpp  registration_point2plane3DOF.cpp  registration_point2point.cpp  registration_point2point.test.cpp  scan_matching.cpp  scan_matching_model.cpp  sequence_3dof.cpp  simple_model.cpp
test/data/: map1.pcd  map15.pcd  map16.pcd  map17.pcd  map18.pcd  map2.pcd  map20.pcd  map22.pcd  map23.pcd  map29.pcd  map32.pcd  map33.pcd  map34.pcd  map35.pcd  map37.pcd  map40.pcd  map41.pcd  map44.pcd  map49.pcd  map5.pcd  map51.pcd  map53.pcd  map55.pcd  map56.pcd  map57.pcd  map59.pcd  map6.pcd  map61.pcd  map62.pcd  map64.pcd  map66.pcd  map69.pcd  map72.pcd  map75.pcd  map8.pcd  scan102.pcd  scan103.pcd  scan105.pcd  scan107.pcd  scan108.pcd  (+96 more)
tst/: camera_calibration.cpp  covariance.cpp  curve_fitting.cpp  differentiation.cpp  draft.cpp  logging.cpp  loss_function.cpp  manifold.cpp  mocks.cpp  mocks.h  multiple_objectives.cpp  parallel.cpp  parameters.cpp  point2point.cpp  powell.cpp  simple_model.cpp  state_model.cpp  test_main.cpp  test_models.h
tst/data/: fachada.txt
(+21 files in other folders)
